syntax = "proto3";
package traceability.traceability;

// this line is used by starport scaffolding # proto/packet/import

option go_package = "traceability/x/traceability/types";

message TraceabilityPacketData {
    oneof packet {
        NoData noData = 1;
        // this line is used by starport scaffolding # ibc/packet/proto/field
				ForbidShipPacketData forbidShipPacket = 6; // this line is used by starport scaffolding # ibc/packet/proto/field/number
				AllowShipPacketData allowShipPacket = 5; // this line is used by starport scaffolding # ibc/packet/proto/field/number
				DestroyDrugPacketData destroyDrugPacket = 4; // this line is used by starport scaffolding # ibc/packet/proto/field/number
				SendDrugPacketData sendDrugPacket = 3; // this line is used by starport scaffolding # ibc/packet/proto/field/number
				RequestShipPacketData requestShipPacket = 2; // this line is used by starport scaffolding # ibc/packet/proto/field/number
    }
}

message NoData {
}

// RequestShipPacketData defines a struct for the packet payload
message RequestShipPacketData {
  string dic = 1;
  string drugprof = 2;
  string termofvalidity = 3;
  string pharmacy = 4;
  string creator = 5;
}

// RequestShipPacketAck defines a struct for the packet acknowledgment
message RequestShipPacketAck {
	}
// SendDrugPacketData defines a struct for the packet payload
message SendDrugPacketData {
  uint64 id = 1;
}

// SendDrugPacketAck defines a struct for the packet acknowledgment
message SendDrugPacketAck {
	}
// DestroyDrugPacketData defines a struct for the packet payload
message DestroyDrugPacketData {
  uint64 id = 1;
}

// DestroyDrugPacketAck defines a struct for the packet acknowledgment
message DestroyDrugPacketAck {
	}
// AllowShipPacketData defines a struct for the packet payload
message AllowShipPacketData {
  uint64 id = 1;
}

// AllowShipPacketAck defines a struct for the packet acknowledgment
message AllowShipPacketAck {
	}
// ForbidShipPacketData defines a struct for the packet payload
message ForbidShipPacketData {
  uint64 id = 1;
}

// ForbidShipPacketAck defines a struct for the packet acknowledgment
message ForbidShipPacketAck {
	}
// this line is used by starport scaffolding # ibc/packet/proto/message
